# hiredis-ccc

./: .gitignore  COPYING  ChangeLog  Makefile.am  README.md  configure.ac
build_msvc/: hiredisccc.sln  hiredisccc_static.sln
build_msvc/async-cluster/: async-cluster.vcxproj  async-cluster.vcxproj.filters
build_msvc/async-non-cluster/: async-non-cluster.vcxproj  async-non-cluster.vcxproj.filters
build_msvc/libhiredisccc/: libhiredisccc.vcxproj
build_msvc/libhiredisccc_static/: libhiredisccc_static.vcxproj  libhiredisccc_static.vcxproj.filters
build_msvc/sync/: sync.vcxproj  sync.vcxproj.filters
docs/: Makefile.am  hiredisccc.1
examples/: Makefile.am
examples/src/: async-cluster.c  async-non-cluster.c  sync.c
libhiredisccc/: Makefile.am
libhiredisccc/include/: Makefile.am  async.h  hircluster.h  hiredis.h  hiredis_exports.h  net.h  sds.h
libhiredisccc/src/: async.c  hircluster.c  hiredis.c  net.c  read.c
rpm/: hiredisccc.spec
vcpkg/: CONTROL  portfile.cmake
