
INC = adapters/ae.h \
      adapters/glib.h \
      adapters/libev.h \
      adapters/libevent.h \
      adapters/libuv.h \
      adlist.h \
      async.h \
      command.h \
      dict.h \
      fmacros.h \
      hiarray.h \
      hircluster.h \
      hiredis.h \
      hiredis_exports.h \
      hiutil.h \
      net.h \
      read.h \
      sds.h

includedir = $(prefix)/hiredisccc
nobase_include_HEADERS = $(INC)
